Quick fix to rescale Filter button of calendar
It was looking sore in the options list, too big to fit in there.

--- a/styles/common.css
+++ b/styles/common.css
@@ -742,9 +742,11 @@ headers and footers */
 
 
 #mv\.action {
-    button > i.bi {
-        font-size: 100%;
+    button {
+        font-size: 10px;
     }
+
+    display: flex;
 }
 
 
